<resources>
    <!--App name-->
    <string name="app_name">X-Change</string>

    <!--Google loaction id-->
    <string name="google_location_key">AIzaSyAHnbJ3_2CS1FslO8zJRyR1wl4oeTV2Cw0</string>

    <!--Google Project number-->
    <string name="project_number">762235396241</string>
    
    <!-- Parse id's-->
    <string name="parse_app_id">MEmquUCRhxXbUAmfym1Uvjl56OKOyMMGPVnnzRFP</string>
    <string name="parse_client_id">lrdxbTU48ZRQV8wGbUHdHgHR60z8fmIjkNLZrtpC</string>
    
    <!--Sinch id's-->
    <string name="sinch_hostname">sandbox.sinch.com</string>
    <string name="sinch_key">98ac7853-c9ae-4de2-88a6-613afefb333b</string>
    <string name="sinch_secret">LSwsC0EGBEWZV9I4I6F6Lw==</string>

    <!--currencylayer id-->
    <string name="currencylayer_key">b64c68d7f8b943563e94862bf704b33f</string>

    <!--openexchangerates id-->
    <string name="openexchangerates_key">44f9466047dc4280b53b883b0b9fd23d</string>


    <!-- Splash screen-->
    <string name="connect_dialog_title">Connection failed</string>
    <string name="connect_dialog_msg">This application requires network access. Enable mobile network or Wi-Fi to access the application</string>
    <string name="connect_dialog_btn">Wifi Settings</string>

    <string name="location_dialog_title">Turn on location</string>
    <string name="location_dialog_msg">This application requires Location access. Enable GPS to access the application.</string>
    <string name="location_dialog_btn">GPS Settings</string>

    <!-- Login & Registration strings-->
    <string name="link_to_register_text">New to X-Change? Register here</string>
    <string name="link_to_login_text">Already has account! Login here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="register_new_account">Register New Account</string>
    <string name="email_not_valid">Email address isn\'t valid.\n
        Please enter a valid email address</string>
    <string name="password_not_valid">Password Should be at least 6 characters,\n
        and contain digits and letters</string>
    <string name="name_is_empty">Please enter a name</string>

    <!-- General strings-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="action_sort">Sort</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="delete">Delete</string>


    <!--location spinner headers-->
    <string name="current_location">Current location</string>
    <string name="enter_manually">Enter manually</string>
    <string name="choose_location">Choose location</string>

    <!--location spinner labels-->
    <string-array name="location_spinner_labels">
        <item>@string/current_location</item>
        <item>@string/enter_manually</item>
        <item>@string/choose_location</item>
    </string-array>

    <!-- nav item headers -->
    <string name="nav_item_main">Main</string>
    <string name="nav_item_my_listings">My Listings</string>
    <string name="nav_item_new_listing">New Listing</string>
    <string name="nav_item_messages">Messages</string>
    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_about">About</string>
    <string name="nav_item_share">Share</string>
    <string name="nav_item_logout">Log Out</string>

    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_main</item>
        <item>@string/nav_item_my_listings</item>
        <item>@string/nav_item_new_listing</item>
        <item>@string/nav_item_messages</item>
        <item>@string/nav_item_profile</item>
        <item>@string/nav_item_about</item>
        <item>@string/nav_item_share</item>
        <item>@string/nav_item_logout</item>
    </string-array>

    <!--activity headers-->
    <string name="title_main">Main</string>
    <string name="title_about">About</string>
    <string name="title_messages">Messages</string>
    <string name="title_activity_splash_screen">Splash Screen</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_sort_dialog">Sort By&#8230;</string>
    <string name="title_filter_dialog">Filter By&#8230;</string>

    <string name="app_default">App Default</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="no_selection">Select an option please</string>

    <!--Main Fragment-->

    <string name="chat_dialog_title">Do you want to talk with </string>

    <string-array name="sort_options">
        <item>@string/app_default</item>
        <item>@string/distance</item>
        <item>@string/rating</item>
    </string-array>

    <string name="from_currency">From Currency</string>
    <string name="to_currency">To Currency</string>

    <string name="no_filter">No Filter</string>
    <string name="max_distance">Max Distance</string>
    <string name="min_rating">Min Rating</string>

    <string-array name="filter_options">
        <item>@string/no_filter</item>
        <item>@string/max_distance</item>
        <item>@string/min_rating</item>
    </string-array>

    <!-- conversion card item -->
    <string name="card_contact">Contact</string>
    <string name="card_details">Details</string>

    <!--New Conversion Activity-->
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="actv_hint">Please enter your place</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="official_rate">Official Rate</string>
    <string name="your_rate">Your Rate</string>
    <string name="na">N/A</string>
    <string name="zero">0.00</string>
    <string name="swap_desc">Swap currencies</string>
    <string name="location_desc">Location</string>
    <string name="from_flag_desc">Flag from</string>
    <string name="to_flag_desc">Flag to</string>
    <string name="empty_amount">Please set a number</string>
    <string name="empty_location">Please set a location</string>

    <!-- profile Activity-->
    <string name="profile_name">Name: </string>
    <string name="profile_email">Email: </string>
    <string name="profile_rating">Rating: </string>
    <string name="choose_action">Choose Action</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_add">Add / Replace</string>

    <!--About Fragment-->
    <string name="about_description">Currency exchange has never been easier.\n
        X-Change is a new app which revolutionise the way we trade money.\n
        Starting now you can exchange money directly with each other, and cut the currency exchange stores commissions.\n\n

        This app was built as part of POST-PC class of The Hebrew University in Jersualem\n
        2015</string>

    <!--Chat-->
    <string name="message_hint">Message...</string>
    <string name="action_rate">Rate</string>

    <string name="title_activity_currency">Choose Currency</string>
    <string name="title_activity_my_listings">My Listings</string>
    <string name="title_activity_new_listing">New Listing</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_list_users">Chat</string>

</resources>
