<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="il.ac.huji.x_change.Activity.NewConversionActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout android:id="@+id/layout_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/currency_amount_from_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText android:id="@+id/currency_amount_from"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/from"
                android:textSize="30sp"
                android:inputType="numberDecimal|phone"
                android:digits="0123456789." />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout android:id="@+id/from_pick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView android:id="@+id/currency_code_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="USD"
                android:textSize="30sp"
                android:gravity="center"/>

            <ImageView android:id="@+id/currency_flag_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/from_flag_desc"
                android:src="@drawable/us"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout android:id="@+id/layout_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_from"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/currency_amount_to_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText android:id="@+id/currency_amount_to"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/to"
                android:textSize="30sp"
                android:inputType="numberDecimal|phone"
                android:digits="0123456789."/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout android:id="@+id/to_pick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView android:id="@+id/currency_code_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="ILS"
                android:textSize="30sp"
                android:gravity="center"/>

            <ImageView android:id="@+id/currency_flag_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/to_flag_desc"
                android:src="@drawable/il"/>

        </LinearLayout>

    </LinearLayout>

    <TextView android:id="@+id/txt_official_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_to"
        android:text="@string/official_rate"/>

    <TextView android:id="@+id/txt_your_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_to"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/your_rate"/>

    <TextView android:id="@+id/official_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_official_rate"
        android:text="@string/na"
        android:inputType="none"/>

    <TextView android:id="@+id/your_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_your_rate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/zero"/>

    <ImageView android:id="@+id/swap"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/layout_to"
        android:layout_centerInParent="true"
        android:contentDescription="@string/swap_desc"
        android:src="@drawable/swap"/>

    <ImageView android:id="@+id/img_location"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/swap"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/location_desc"
        android:src="@drawable/marker"/>

    <Spinner android:id="@+id/spinner_location"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_location"
        android:layout_centerHorizontal="true" />

    <AutoCompleteTextView
        android:id="@+id/actv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_location"
        android:hint="@string/actv_hint" />

    <Button
        android:id="@+id/new_conversion_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/btn_ok"/>

    <Button
        android:id="@+id/new_conversion_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/btn_cancel"/>

</RelativeLayout>
