<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_height="match_parent"
android:layout_width="match_parent"
android:fillViewport="true"
tools:context="il.ac.huji.x_change.Activity.RegisterActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <!--  Header  Starts-->
    <LinearLayout android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@layout/header_gradient"
        android:paddingTop="5dip"
        android:paddingBottom="5dip">
        <!-- Logo Start-->
        <ImageView android:src="@drawable/logo_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"/>
        <!-- Logo Ends -->
    </LinearLayout>
    <!--  Header Ends -->

    <!-- Footer Start -->
    <LinearLayout android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="90dip"
        android:background="@layout/footer_repeat"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
    </LinearLayout>
    <!-- Footer Ends -->

    <!-- Registration Form -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:layout_below="@id/header">
        <!-- Full Name Label -->
        <!--<TextView android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="#372c24"-->
            <!--android:text="@string/full_name"/>-->
        <EditText android:id="@+id/reg_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:singleLine="true"
            android:hint="@string/full_name"
            android:layout_marginBottom="20dip"/>
        <!--  Email Label -->
        <!--<TextView android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="#372c24"-->
            <!--android:text="@string/email"/>-->
        <EditText android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:singleLine="true"
            android:hint="@string/email"
            android:layout_marginBottom="20dip"
            android:inputType="textEmailAddress"/>
        <!-- Password Label -->
        <!--<TextView android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="#372c24"-->
            <!--android:text="@string/password"/>-->
        <EditText android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"
            android:hint="@string/password"
            android:layout_marginTop="5dip"/>
        <!-- Register Button -->
        <Button android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/register_new_account"/>
        <!-- Link to Login Screen -->
        <TextView android:id="@+id/link_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:layout_marginBottom="40dip"
            android:text="@string/link_to_login_text"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#025f7c"/>

    </LinearLayout>
    <!-- Registration Form Ends -->
</RelativeLayout>
</ScrollView>